--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="header">
-      <nav>
+      <nav id="navBar">
         <img src="images/logo.png" class="logo" />
         <ul class="nav-links">
           <li><a href="#">Popular place</a></li>
@@ -32,6 +32,7 @@
           <li><a href="#">Online Packages</a></li>
         </ul>
         <a href="#" class="register-btn">Register</a>
+        <i class="fas fa-bars" onclick="togglebtn()"></i>
       </nav>
       <div class="container">
         <h1>Find Your Next Stay</h1>
@@ -204,5 +205,11 @@
         <p>Copyright @ 2021, Easy Tutorials.</p>
       </div>
     </div>
+    <script>
+      var navBar = document.getElementById("navBar");
+      function togglebtn() {
+        navBar.classList.toggle("hidemenu");
+      }
+    </script>
   </body>
 </html>
