--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
 
         <div>
           <img src="images/new-york.png" />
-          <h3>Dubai</h3>
+          <h3>NewYork</h3>
         </div>
         <div>
           <img src="images/paris.png" />
-          <h3>Dubai</h3>
+          <h3>Paris</h3>
         </div>
         <div>
           <img src="images/new-delhi.png" />
-          <h3>Dubai</h3>
+          <h3>New-delhi</h3>
         </div>
       </div>
       <div class="cta">
