--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         <div>
           <img src="images/new-delhi.png" />
-          <h3>New-delhi</h3>
+          <h3>New delhi</h3>
         </div>
       </div>
       <div class="cta">
